# learn_git

./: .gitignore  1.md  2.md  CMakeLists.txt  README.md  main.cpp  宿舍分支.txt  本地-办公室.txt  本地.txt  远程.txt
src/: main.cpp  merge_video.cpp  merge_video.py
